--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.textBox {
+    display: flex;
+    flex-direction: column;
+}
 
 .card-body {
     padding: 15px;
@@ -565,7 +569,6 @@ body {
     max-width: 90%;
     width: 90%;
     height: auto;
-    border: 1px solid red;
 }
 
 #TopContactInformation {
@@ -582,7 +585,6 @@ body {
     color: #626262;
 
     box-sizing: border-box;
-    border: 1px solid red;
 }
 
 .elements-group-top_dados_contato > div {
@@ -591,7 +593,6 @@ body {
     vertical-align: top;
     max-width: 10px;;
 
-    border: 1px solid red;
 }
 
 .elements-group-top_dados_contato > div:first-of-type > div {
@@ -629,6 +630,7 @@ body {
     transition: opacity .1s ease-in;
 
     font-size: normal;
+    margin-left: 5px;
 
 }
 
@@ -665,7 +667,6 @@ body {
     width: auto;
 
     justify-content: center;
-    border: 1px solid red;
     margin: 0px 10px;
 
     overflow: hidden;
@@ -729,7 +730,6 @@ body {
 .email-list {
     width: 100%;
     display: inline-block;
-
 }
 
 .email-list-body {
@@ -738,11 +738,14 @@ body {
     padding: 5px 10px 7px;
 
     display: flex;
+    gap: 100px;
     align-items: center;
     min-height: 40px;
-
 }
 
+.email-group-info {
+    display: flex;
+}
 .icon-send-email_list {
     font-size: 33px;
     color: black;
@@ -814,7 +817,102 @@ body {
     margin-top: 0;
     width: 40%;
     display: flex;
-    border: 1px solid red;
+
+}
+
+.sub_container-group_box {
+    display: flex;
+    align-items: center;
+
+    justify-content: space-between;
+    margin-left: 8rem;
+
+    width: 70%;
+}
+
+.valided-box {
+    background-color: #3498db;
+    display: flex;
+
+    line-height: initial;
+    padding: 0.3em 0.7em 0.4em;
+    font-size: 84%;
+    text-align: center;
+    gap: 4px;
+
+    font-weight: 600;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.valided_box-done_icon {
+    display: inline;
+    font: normal normal normal 14px/1;
+    font-size: 18px;
+    text-rendering: auto;
+    font-weight: bolder;
+
+    line-height: 16px;
+    transition: opacit .1s ease-in;
+
+
+}
+
+.facebook-box {
+    background-color: #3498db;
+    display: flex;
+
+    line-height: initial;
+    padding: 0.3em 0.7em 0.4em;
+    font-size: 84%;
+    text-align: center;
+    gap: 4px;
+
+    font-weight: 600;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.linkedin-box {
+    background-color: #777;
+    display: flex;
+
+    line-height: initial;
+    padding: 0.3em 0.7em 0.4em;
+    font-size: 84%;
+    text-align: center;
+    gap: 4px;
+
+    font-weight: 600;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.digital-box {
+    background-color: #777;
+    display: flex;
+
+    line-height: initial;
+    padding: 0.3em 0.7em 0.4em;
+    font-size: 84%;
+    text-align: center;
+    gap: 4px;
+
+    font-weight: 600;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
 }
 
 .hot-address-1 {
@@ -832,10 +930,9 @@ body {
     margin: 0 10px;
     color: #888;
 
+    cursor: pointer;
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 4px;
-
-    border: 1px solid red;
 }
 
 .icon-location-hot_address {
@@ -882,7 +979,6 @@ body {
     width: auto;
 
     justify-content: center;
-    border: 1px solid red;
     gap: 3px;
 
     overflow: hidden;
@@ -893,6 +989,7 @@ body {
     width: auto;
     background-color: #fdfdfd;
     
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -906,7 +1003,6 @@ body {
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 4px;
 
-    border: 1px solid red;
 }
 
 .icon-location-hot_phone {
@@ -929,7 +1025,6 @@ body {
 
     gap: 3px;
     justify-content: center;
-    border: 1px solid red;
 
     overflow: hidden;
 }
@@ -939,6 +1034,7 @@ body {
     width: auto;
     background-color: #fdfdfd;
     
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -952,7 +1048,6 @@ body {
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 4px;
 
-    border: 1px solid red;
 }
 
 .text_container-hot_phone {
@@ -964,7 +1059,238 @@ body {
 
     gap: 3px;
     justify-content: center;
-    border: 1px solid red;
 
     overflow: hidden;
 }
+
+
+/*************** containers top dados de contato *******************/
+
+.container_pai-pessoas_relevantes {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+
+#MostRelevantPeople {
+    width: 100%;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#MostRelevantPeople > div {
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    background-color: #7c829d!important;
+    color: #e2e2e2 !important;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+}
+
+#card-head-most_people {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+
+}
+
+#card-head-most_people > h4 {
+    line-height: 0;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-weight: bold;
+}
+
+
+#card-head-most_people > i {
+    font-size: 24px;
+}
+
+
+.main-card-info-most_people {
+    color: #e2e2e2;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.responsive {
+    width: 100%;
+    display: inline-block;
+}
+
+.responsive-body {
+    box-sizing: border-box;
+}
+
+.col_1-most_people {
+    border-color: #6a6e80;
+    border-bottom: 1px solid #e7e7e7;
+    padding: 5px 10px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.col_1-most_people:hover {
+    background-color: #3b3f4f;
+    transition: 0.2s;
+}
+
+.col_2-most_people {
+    margin-bottom: -10px;
+    border-color: #6a6e80;
+    border: 0;
+    padding: 5px 10px 7px;
+
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    min-height: 40px;
+
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.col_2-most_people:hover {
+    background-color: #3b3f4f;
+    transition: 0.2s;
+}
+
+.box_photo {
+    width: auto;
+    height: auto;
+    display: block;
+    box-sizing: border-box;
+    color: #e2e2e2 !important;
+}
+
+.person-photo-most_people {
+    background-color: #6a6e80;
+    width: 35px;
+    height: 35px;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+
+    border-radius: 64px;
+    color: #e2e2e2 !important;
+}
+
+.person-photo-most_people::before {
+    content: attr(data-initials);
+    font-weight: bold;
+    position: absolute;
+    top: 7.5px;
+    font-size: 15px;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+
+    color: #e2e2e2 !important;
+}
+
+.icon-box-most_people {
+    display: flex;
+    gap: 4px;
+}
+
+.status_box-most_people {
+    margin-top: 0;
+    width: 10%;
+}
+
+.vinculo_box-most_people {
+    width: 20%;
+}
+
+.name_box-most_people {
+    width: 40%;
+}
+
+.box-status-most_people {
+    opacity: .4;
+    background-color: #777;
+    font-size: 10px;
+
+    display: inline;
+    padding: 0.3em 0.7em 0.4em;
+    font-weight: 600;
+    line-height: 14px;
+    color: #fff;
+    text-align: center;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+}
+
+.box_arrow-most_people {
+    width: 10%;
+    margin-top: 0;
+    text-align: right;
+
+    display: block;
+    color: #e2e2e2 !important;
+}
+
+.box_arrow-most_people > a {
+    border-color: transparent;
+    background-color: transparent;
+    line-height: 17px;
+
+    color: #e2e2e2;
+    font-size: 24px;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: .65;
+    box-shadow: none;
+    pointer-events: none;
+    transition: opacity .1s ease-in;
+    padding: 5px 10px;
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    user-select: none;
+
+    text-rendering: auto;
+}
+
+.box_arrow-most_people >a::before {
+    content: ">";
+}
+
