--- a/style.css
+++ b/style.css
@@ -566,8 +566,8 @@ body {
     justify-content: start;
     margin-bottom: 20px;
 
-    max-width: 90%;
-    width: 90%;
+    max-width: 100%;
+    width: 92%;
     height: auto;
 }
 
@@ -1292,5 +1292,247 @@ body {
 
 .box_arrow-most_people >a::before {
     content: ">";
+}
+
+/*************** containers score credito *******************/
+
+.main-card-score_credito {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 100%;
+    width: 92%;
+    height: auto;
+
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+}
+
+#score {
+    width: auto;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.card_main-score {
+    padding: 0px 10px;
+    display: flex;
+    margin-bottom: 0;
+
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.card-body-score {
+    padding: 10px;
+    text-align: center;
+    width: 320px;
+
+    border-radius: 3px;
+    background-color: #fff;
+    border: 1px solid #cccccc;
+
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+}
+
+.card-body-score > h4 {
+    display: block;
+
+    text-align: center;
+    line-height: 10px;
+    font-size: 12px;
+
+    margin-top: 9.5px;
+    margin-bottom: 9.5px;
+
+    font-family: inherit;
+    font-weight: 600;
+    color: inherit;
+    text-rendering: optimizeLegibility;
+
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+}
+
+.main-card-info-score {
+    box-sizing: border-box;
+    display: block;
+    text-align: center;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.thermometer-score {
+    margin-bottom: 10px;
+    padding-top: 10px;
+    line-height: 0;
+
+    font-size: 30px;
+    box-sizing: border-box;
+    text-align: center;
+    font-weight: 400;
+    color: #626262;
+
+}
+
+.thermometer-score > i {
+    vertical-align: middle;
+    color: #70ca63;
+
+    margin-right: 10px;
+    font-size: 20px;
+    font: normal normal normal 14px/1;
+    text-rendering: auto;
+    text-align: center;
+
+}
+
+.content-left-score {
+    float: left;
+    box-sizing: border-box;
+
+    text-align: center;
+    width: 50%;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    
+}
+
+
+.content-left-score > small {
+    display: block;
+    text-align: left;
+    font-size: 10px;
+}
+
+.content-left-score > strong {
+    display: block;
+    text-align: left;
+    font-size: 13px;
+
+    font-weight: 600;   
+}
+
+.content-right-score {
+    float: right;
+    box-sizing: border-box;
+
+    text-align: center;
+    width: 50%;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+    
+}
+
+.content-right-score > small {
+    display: block;
+    text-align: right;
+    font-size: 10px;
+}
+
+
+.content-right-score > strong {
+    display: block;
+    text-align: right;
+    font-size: 13px;
+
+    font-weight: 600;   
+}
+
+.card-head-score {
+    display: flex;
+    border: 1px solid red;
+    align-items: center;
+    justify-content: center;
+
+    max-height: 39px;
+}
+
+.button-score-refresh {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: #626262;
+    outline: none;
+
+    margin-top: 1px;
+    background-color: #f0f0f0;
+    border-color: rgba(0,0,0,.1);
+
+    padding: 1px 5px;
+    line-height: 1.5;
+    border-radius: 2px;
+    width: 10px;
+
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+
+    border-color: rgba(0,0,0,.07) rgba(0,0,0,.1) rgba(0,0,0,.18);
+    white-space: nowrap;
+    user-select: none;
+    box-sizing: border-box;
+
+    font-family: inherit;
+    text-transform: none;
+    overflow: visible;
+}
+
+.button-score-refresh > i {
+    display: inline-block;
+    font-size: 24px;
+
+    text-rendering: auto;
+    box-sizing: border-box;
+    font-weight: bold;
+
+    opacity: 1;
+    transition: opacity .1s ease-in;
+
+    color: #626262;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    user-select: none;
+
+    text-transform: none;
+
 }
 
