--- a/style.css
+++ b/style.css
@@ -24,9 +24,68 @@
 }
 
 .disabled {
-    display: none;
+    display: none!important;
+    padding: 0px!important;
+    margin: 0px!important;
 }
 
+.button-box {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: #626262;
+    outline: none;
+
+    margin-top: 1px;
+    background-color: #f0f0f0;
+    border-color: rgba(0,0,0,.1);
+
+    padding: 1px 1px;
+    line-height: 1;
+    border-radius: 2px;
+    width: auto;
+
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+
+    border-color: rgba(0,0,0,.07) rgba(0,0,0,.1) rgba(0,0,0,.18);
+    white-space: nowrap;
+    user-select: none;
+    box-sizing: border-box;
+
+    padding-block: 1px;
+    padding-inline: 6px;
+
+    font-family: inherit;
+    text-transform: none;
+    overflow: visible;
+}
+
+.icon-button {
+    display: inline-block;
+    font-size: 22px;
+
+    text-rendering: auto;
+    box-sizing: border-box;
+    font-weight: bold;
+
+    opacity: 1;
+    transition: opacity .1s ease-in;
+
+    color: #626262;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    user-select: none;
+
+    text-transform: none;
+
+}
 
 /*********** BODY ****************/
 
@@ -263,7 +322,7 @@ body {
     flex-wrap: wrap;
     justify-content: start;
 
-    max-width: 90%;
+    max-width: 100%;
     width: 90%;
     break-inside: avoid-region!important;
     margin-bottom: 20px;
@@ -517,25 +576,18 @@ body {
 }
 
 #card-header-situacao_cadastral > button {
-    margin: 0;
-    color: #626262;
-    outline: none;
-
-    width: auto;
-    height: 25px;
     position:relative;
-    right: -62.9rem;
-    padding: 0px 0px;
+    right: -60rem;
+    padding: 0 2px;
+    vertical-align: middle;
+    line-height: 0px;
 
-    cursor: pointer;
-    border-radius: 3px;
-    border: 1px solid #626262;
+    font: inherit;
 }
 
 #card-header-situacao_cadastral > button:hover {
     background-color: #d8d5d5;
     transition: 1s;
-
 }
 
 .main-card-info-situacao_cadastral {
@@ -1472,67 +1524,818 @@ body {
     font-weight: 600;   
 }
 
-.card-head-score {
-    display: flex;
-    border: 1px solid red;
-    align-items: center;
-    justify-content: center;
+.card-body-score > button {
+    float: right;
 
-    max-height: 39px;
-}
-
-.button-score-refresh {
-    margin: 0;
-    font-size: 14px;
-    font-weight: 400;
-    color: #626262;
-    outline: none;
-
-    margin-top: 1px;
-    background-color: #f0f0f0;
-    border-color: rgba(0,0,0,.1);
-
-    padding: 1px 5px;
-    line-height: 1.5;
-    border-radius: 2px;
-    width: 10px;
-
-    display: inline-block;
-    text-align: center;
+    padding: 0 2px;
     vertical-align: middle;
 
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
+    font: inherit;
+}
 
-    border-color: rgba(0,0,0,.07) rgba(0,0,0,.1) rgba(0,0,0,.18);
-    white-space: nowrap;
-    user-select: none;
+.card-body-score > button:hover {
+    background-color: #d8d5d5;
+    transition: 1s;
+}
+
+.card-body-score > button > i {
+    font-size: 20px;
+    line-height: 0px;
+}
+
+.card-body-score > h4 {
+    display: inline-block;
+    text-align: center;
+    line-height: 10px;
+
+    font-size: 12px;
     box-sizing: border-box;
+
+    margin-top: 9.5px;
+    margin-bottom: 9.5px;
 
     font-family: inherit;
-    text-transform: none;
-    overflow: visible;
+    font-weight: 600;
+    color: inherit;
+
+    text-rendering: optimizelegibility;
 }
 
-.button-score-refresh > i {
-    display: inline-block;
-    font-size: 24px;
-
-    text-rendering: auto;
+.main-card-info-score {
     box-sizing: border-box;
-    font-weight: bold;
+    display: block;
+    text-align: center;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+
+}
+
+.sub-card-info-score {
+    cursor: pointer;
+    
+}
+
+.total_processos-score {
+    margin-bottom: 10px;
+    padding-top: 10px;
+    line-height: 0;
+
+    font-size: 30px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    gap: 5px;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.total_processos-score > span {
+    margin-bottom: 10px;
+    padding-top: 10px;
+    line-height: 0;
+
+    font-size: 20px;
+    color: #70ca63;
 
     opacity: 1;
-    transition: opacity .1s ease-in;
+    vertical-align: middle;
+}
 
+.group-bottom_info-score {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.total_processos_ativa-score {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
     color: #626262;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-    user-select: none;
+    width: auto;
 
-    text-transform: none;
+    min-height: 1px;
+
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.total_processos_ativa-score > strong {
+    text-align: left;
+}
+
+
+/*************** containers renda + classe social *******************/
+
+.main-card-classe_social {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#Income {
+    width: 100%;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262; 
+}
+
+.card-header-classe_social {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+#Income > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+}
+
+.card-header-classe_social {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+.card-header-classe_social > i {
+    color: #f79c51;
+    font-size: 18px;
+}
+
+.main-card-info-classe_social {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.container_cima-classe_social {
+    border-color: #6a6e80;
+    border-bottom: 1px solid #e7e7e7;
+    padding: 5px 0px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.main_container-baixo {
+    display: flex;
+    gap: 10rem;
+}
+
+.container_baixo-classe_social {
+    height: 40px;
+    max-height: auto;
+    border-color: #6a6e80;
+    border: 0;
+    padding: 5px 0px px;
+
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    min-height: 40px;
+
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.green_box-classe_social {
+    margin-top: 0;
+    width: 20%;
+}
+
+.sub_container-green_box {
+    color: #fff;
+    padding: 5px 20px;
+    border-radius: 3px;
+
+    background-color: #70ca63;
 
 }
 
+.container_baixo-classe_social > h2 {
+    line-height: 30px;
+    margin: 0 5px 0 0;
+    padding: 0;
+
+    font-size: 30px;
+    box-sizing: border-box;
+    font-family: inherit;
+    font-weight: 600;
+
+    text-rendering: optimizelegibility;
+
+}
+
+#classeSocialPessoal > small, #containerTextBottom > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+}
+
+#classeSocialPessoal > strong, #containerTextBottom > strong {
+    height: 18px;
+    font-size: 14px;
+    font-weight: 600;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: fit-content;
+    max-width: calc(100% - 5px);
+    margin-right: 25px;
+
+    color: #424242;
+    display: block;
+    line-height: 1.231;
+}
+
+#classeSocialPessoal > strong > span, #containerTextBottom > strong > span {
+    font-size: 10px;
+    box-sizing: border-box;
+    color: #424242;
+    line-height: 1.231;
+
+}
+
+
+/*************** containers que deve ser exibido somente se o usuário for PJ *******************/
+
+.main-card-component {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#ClientIsPJ {
+    width: 100%;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262; 
+}
+
+#ClientIsPJ > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+}
+
+
+
+/*************** PF = lista de atividades/funções; PJ = CNAEs *******************/
+
+.main-card-pf_lista_acoes_funcoes {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#Activities {
+    width: 100%;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#Activities > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+}
+
+#head-boxPjPf > i {
+    color: #f79c51;
+    font-size: 18px;
+}
+
+.main-card-info-pf_lista_acoes_funcoes {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.main-card-info-pf_lista_acoes_funcoes > h3 {
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 6px;
+    padding-top: 5px;
+
+    text-transform: uppercase;
+    margin: 0;
+    font-weight: 200;
+
+    box-sizing: border-box;
+    font-size: 18px;
+
+    font-family: inherit;
+    line-height: 1.1;
+    color: inherit;
+    text-rendering: optimizeLegibility;
+}
+
+
+/*************** containers de dados profissionais *******************/
+
+
+.main-card-dados_profissionais {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#ProfessionalData {
+    width: 100%;
+    margin-bottom: 20px;
+
+    box-sizing: border-box;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#ProfessionalData > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+}
+
+#professional_data-id > i {
+    color: #f79c51;
+    font-size: 18px;
+}
+
+.main-card-info-professional_data {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.main-card-info-professional_data > h3 {
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 6px;
+    padding-top: 5px;
+
+    text-transform: uppercase;
+    margin: 0;
+    font-weight: 200;
+
+    box-sizing: border-box;
+    font-size: 18px;
+
+    font-family: inherit;
+    line-height: 1.1;
+    color: inherit;
+    text-rendering: optimizeLegibility;
+}
+
+/*************** Containers de pessoas de contatos *******************/
+
+.main-card-contact_persons {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#ContactPersons > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+    width: 1215px;
+}
+
+.card-head-contact_persons {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+.card-head-contact_persons > h4 {
+    line-height: 0;
+    margin: 0;
+    color: #f79c51;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-weight: bold;
+}
+
+
+.card-head-contact_persons > i {
+    font-size: 21px;
+    color: #f79c51;
+}
+
+.main-card-info-contact_persons {
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.container_group-contact_persons {
+    display: flex;
+    flex-direction: column;
+}
+
+.col-1-contact_persons {
+    border-color: #6a6e80;
+    border-bottom: 1px solid #e7e7e7;
+    padding: 5px 10px 7px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+
+    margin-bottom: -10px;
+    cursor: pointer;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.col-2-contact_persons {
+    border-color: #6a6e80;
+    border: 0;
+    padding: 5px 10px 7px;
+
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 40px;
+    margin-top: 10px;
+
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.col-1-contact_persons:hover , .col-2-contact_persons:hover {
+    background-color: #e9e9e9;
+    transition: 0.2s;
+}
+
+.person-photo-contact_persons {
+    background-color: #d4d4d4;
+    width: 35px;
+    height: 35px;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+
+    border-radius: 64px;
+    color: #e2e2e2 !important;
+}
+
+
+.person-photo-contact_persons::before {
+    content: attr(data-initials);
+    font-weight: bold;
+    position: absolute;
+    top: 7.5px;
+    font-size: 15px;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+
+    color: #6a6e80 !important;
+}
+
+
+.name_box-contact_persons-1, .name_box-contact_persons-2 {
+    width: 40%;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.name_box-contact_persons-1 > small, .name_box-contact_persons-2 > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+
+}
+
+.name_box-contact_persons-1 > strong, .name_box-contact_persons-2 > strong {
+    height: 18px;
+    font-size: 14px;
+    font-weight: 600;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: fit-content;
+    max-width: calc(100% - 5px);
+
+    margin-right: 25px;
+    color: #424242;
+    white-space: pre;
+}
+
+.vinculo_box-contact_persons-1, .vinculo_box-contact_persons-2 {
+    margin-top: 0;
+    width: 20%;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.vinculo_box-contact_persons-1 > small, .vinculo_box-contact_persons-2 > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+}
+
+
+.vinculo_box-contact_persons-1 > span, .vinculo_box-contact_persons-2 > span {
+    background-color: #70ca63;
+    font-size: 10px;
+    display: inline;
+    padding: 0.3em 0.7em 0.4em;
+    font-weight: 600;
+    line-height: 16px;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    max-width: 22px;
+    border-radius: 3px;
+}
+
+.status_box-contact_persons-1, .status_box-contact_persons-2 {
+    width: 10%;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.status_box-contact_persons-1 > small, .status_box-contact_persons-2 > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+
+    line-height: 1.232;
+    font-weight: 400;
+}
+
+.div-status_box-contact_persons {
+    display: flex;
+    gap: 5px;
+}
+
+.div-status_box-contact_persons > span {
+    opacity: .4;
+    background-color: #777;
+
+    font-size: 10px;
+    display: inline;
+    padding: 0.3em 0.7em 0.4em;
+
+    font-weight: 600;
+    line-height: 16px;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25em;
+
+    max-width: 22px;
+}
+
+.cpf_box-contact_persons-1, .cpf_box-contact_persons-2 {
+    width: 15%;
+    box-sizing: border-box;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+
+.cpf_box-contact_persons-1 > small, .cpf_box-contact_persons-2 > small {
+    color: #424242;
+    font-size: 11px;
+    display: block;
+
+    line-height: 1.231;
+    font-weight: 400;
+}
+
+.cpf_box-contact_persons-1 > strong, .cpf_box-contact_persons-2 > strong {
+    height: 18px;
+    font-size: 14px;
+    font-weight: 600;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: fit-content;
+    max-width: calc(100% -5px);
+    margin-right: 25px;
+    color: #424242;
+}
+
+.arrow_box-contact_persons-1, .arrow_box-contact_persons-2 {
+    text-align: right;
+    display: block;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.arrow_box-contact_persons-1 > a, .arrow_box-contact_persons-2 > a {
+    border-color: transparent;
+    background-color: transparent;
+
+    line-height: 17px;
+    font-size: 14px;
+    text-decoration: none;
+    cursor: pointer;
+
+    color: #b3b3b3!important;
+    pointer-events: none;
+    opacity: .65;
+    box-shadow: none;
+
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    user-select: none;
+}
+
+.arrow_box-contact_persons-1 > a::before, .arrow_box-contact_persons-2 > a::before {
+    content: ">";
+    line-height: 20px;
+    box-sizing: border-box;
+
+    font-size: 25px;
+    cursor: pointer;
+    color: #b3b3b3!important;
+    text-align: center;
+    font-weight: normal;
+}
+
+
+/*************** Containers de relacionamento *******************/
+
+
+.main-card-relacionamento {
+    break-inside: avoid-region;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: start;
+    margin-bottom: 20px;
+
+    max-width: 90%;
+    width: 90%;
+    height: auto;
+}
+
+#InCommon {
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+#InCommon > div {
+    border-radius: 3px;
+    background-color: #fff;
+
+    border: 1px solid #cccccc;
+    box-shadow: 0px 10px 7px -10px #b5b5b5;
+    box-sizing: border-box;
+
+    line-height: 1.231;
+    font-weight: 400;
+    font-size: 14px;
+    color: #626262;
+}
+
+.card-heade-relacionamento {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    height: auto;
+
+    gap: 5px;
+}
+
+.card-heade-relacionamento > h4 {
+    line-height: 0;
+    margin: 0;
+    color: #f79c51;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-weight: bold;
+}
+
+.card-heade-relacionamento > i {
+    font-size: 21px;
+    color: #f79c51;
+}
