Adicionei espaçamento no topo do layou

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body {
 
     flex-direction: row;
     margin-bottom: 20px;
+    margin-top: 20px;
     break-inside: avoid-region!important;
 }
 
