--- a/style.css
+++ b/style.css
@@ -582,6 +582,9 @@ body {
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
+
+    width: 100%; 
+    margin:  25px; 
 }
 
 #card-header-situacao_cadastral > button {
