--- a/cliente/table.css
+++ b/cliente/table.css
@@ -1,19 +1,19 @@
-tbody td{
-    padding: 5px;
+.table-bordered  td{
+    padding: 10px;
 
     width: 10%;
-    background: rgba(107, 165, 223, 0.918);
+    background: rgba(206, 211, 215, 0.918);
     text-align: center;
     position: relative;
     padding: 20px;
 
-}tbody tr{
+} .table tr{
             padding: 1px;
             text-align: center;
             width: 10%;
 
-            border-top: 1px solid #002f45;
-           
-}tbody{
+            border-top: 1px solid #000000;
+            border-bottom: 1px solid #000000;
 
+           
 }
