Finalizada parte tablet, faltando ajustes em botões e na transição para desktop

--- a/Responsive/mobileResponsive_view.css
+++ b/Responsive/mobileResponsive_view.css
@@ -12,7 +12,8 @@
         box-sizing: border-box;
         display: block;
 
-    }.card-info {
+    }
+    .card-info {
         width: 100%;
         height: auto;
         border-radius: 3px;
