Resolvido bug dos labels

--- a/style.css
+++ b/style.css
@@ -2484,7 +2484,7 @@ body {
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px; 
+    width: 100%; 
 }
 
 .card-heade-lista_enderecos {
@@ -2984,7 +2984,7 @@ body {
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px
+    width: 100%;
 }
 
 .col-1-lista_enderecos-business {
@@ -3114,7 +3114,7 @@ body {
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px
+    width: 100%;
 }
 
 .card-heade-lista_telefones {
@@ -3527,7 +3527,7 @@ body {
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px
+    width: 100%;
 }
 
 .icon-box-lista_emails {
@@ -4173,7 +4173,7 @@ width: auto;
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px
+    width: 100%;
 }
 
 .card-header-lsta_telefone {
@@ -4289,7 +4289,7 @@ width: auto;
     flex-wrap: wrap;
 
     justify-content: start;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 
     max-width: 90%;
     width: 90%;
@@ -4301,7 +4301,7 @@ width: auto;
 
 #StatisticModels {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     line-height: 1.231;
     font-weight: 400;
     font-size: 14px;
@@ -4316,7 +4316,7 @@ width: auto;
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
-    width: 1215px
+    width: 100%;
 }
 
 .card-header-modelos_estatisticos {
@@ -4353,6 +4353,7 @@ width: auto;
 .main-container-modelos_estatisticos {
     display: flex;
     flex-direction: column;
+
 }
 
 .box-content-modelos_estatiscos {
